--- a/static/sass/img/ajax-loader1.html
+++ b/static/sass/img/ajax-loader1.html
@@ -6,10 +6,10 @@
         <title>404: Page not found - HostGator</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" type="image/x-icon" href="/img-sys/favicon.ico" />
-        
+        {% comment %} {% comment %} <link rel="shortcut icon" type="image/x-icon" href="/img-sys/favicon.ico" /> {% endcomment %} {% endcomment %}
+
         <link rel="stylesheet" href="/img-sys/css/style.min.css">
-        
+
         <script src="/img-sys/js/respond.min.js" async="async"></script>
         <script src="/img-sys/js/modernizr-2.6.2.min.js" async="async"></script>
     </head>
